--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -9,25 +9,27 @@
     <title>Restaurant List</title>
   </head>
   <body>
-    <header>
-      <!-- navigation -->
-      <nav class='navbar navbar-light bg-light'>
-        <div class='container'>
-          <a class='navbar-brand' href='/'>
-            <img
-              src='https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png'
-              width='30'
-              height='30'
-              class='d-inline-block align-top'
-              alt='我的餐廳清單'
-            />
-            我的餐廳清單
-          </a>
-        </div>
-      </nav>
-      <div class='banner'></div>
-    </header>
-    {{{body}}}
+    <div class="position-relative">
+      <div class="header">
+        <nav class='navbar navbar-light bg-light'>
+          <div class='container'>
+            <a class='navbar-brand' href='/'>
+              <img
+                src='https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png'
+                width='30'
+                height='30'
+                class='d-inline-block align-top'
+                alt='我的餐廳清單'
+              />
+              我的餐廳清單
+            </a>
+            <a href='/users/login' class='btn btn-outline-dark'>Login</a>
+          </div>
+        </nav>
+        <div class='banner'></div>
+      </header>
+      {{{body}}}
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
   </body>
