--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -89,22 +89,22 @@
 
 .login-card {
   margin: 0 auto;
-  max-width: 900px;
+  max-width: 1000px;
   border-radius: 8px;
   padding: 20px 30px;
-  border: 0;
-  margin-top: -160px;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+  margin-top: -250px;
 }
 
 .register-card {
   margin: 0 auto;
-  max-width: 900px;
+  max-width: 1000px;
   border-radius: 8px;
   padding: 20px 30px;
-  border: 0;
-  margin-top: -260px;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+  margin-top: -350px;
+}
+
+.btn-create {
+  width: 7%;
 }
 
 @media screen and (max-width: 992px) {
