--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -4,38 +4,38 @@
     <div class='search-bar-outer'>
       <div class='search-bar-inner'>
         <h4 class='mb-2'>尋找餐廳：</h4>
-          <div class='d-flex flex-column flex-sm-row align-items-sm-center'>
-            <div class='input-group mb-2 mb-sm-0 mr-sm-2'>
-              <input
-                type='text'
-                name='keywords'
-                class='form-control'
-                placeholder='輸入餐廳、分類'
-                aria-label='Restaurant Name...'
-                aria-describedby='search-button'
-                value='{{input}}'
-              />
-              <div class='input-group-append'>
-                <button class='btn btn-major' type='submit' id='search-button'><i class='fas fa-search'></i></button>
-              </div>
+        <div class='d-flex flex-column flex-sm-row align-items-sm-center'>
+          <div class='input-group mb-2 mb-sm-0 mr-sm-2'>
+            <input
+              type='text'
+              name='keywords'
+              class='form-control'
+              placeholder='輸入餐廳、分類'
+              aria-label='Restaurant Name...'
+              aria-describedby='search-button'
+              value='{{input}}'
+            />
+            <div class='input-group-append'>
+              <button class='btn btn-major' type='submit' id='search-button'><i class='fas fa-search'></i></button>
             </div>
           </div>
+        </div>
       </div>
     </div>
   </div>
 
   <div class='sort-bar-container d-inline-flex justify-content-end'>
     <div class='sort-bar mr-5'>
-        <div class='input-group'>
-          <select class='form-control' id='sort' name='sort' onchange='form.submit()'>
-            <option value="{{ sort }}" hidden >{{ sortKey }}</option>
-            <option value="name">A > Z</option>
-            <option value="-name">Z > A</option>
-            <option value="category">類型</option>
-            <option value="location">地區</option>
-            <option value="-rating">Rating</option>
-          </select>
-        </div>
+      <div class='input-group'>
+        <select class='form-control' id='sort' name='sort' onchange='form.submit()'>
+          <option value='{{sort}}' hidden>{{sortKey}}</option>
+          <option value='name'>A > Z</option>
+          <option value='-name'>Z > A</option>
+          <option value='category'>類型</option>
+          <option value='location'>地區</option>
+          <option value='-rating'>Rating</option>
+        </select>
+      </div>
     </div>
   </div>
 </form>
@@ -80,3 +80,7 @@
   </div>
 
 {{/if}}
+
+<a href='/restaurant/new' type='button' class='btn btn-success btn-create fixed-bottom m-3'>
+  新增餐廳
+</a>
