--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -33,6 +33,7 @@
         <div class='banner'></div>
       </header>
       {{{body}}}
+      <footer class='mb-5'/>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
