--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -16,7 +16,7 @@
               value='{{input}}'
             />
             <div class='input-group-append'>
-              <button class='btn btn-major' type='submit' id='search-button'><i class='fas fa-search'></i></button>
+              <button class='btn btn-major h-100 ' type='submit' id='search-button'><i class='fas fa-search'></i></button>
             </div>
           </div>
         </div>
@@ -25,7 +25,7 @@
   </div>
 
   <div class='sort-bar-container d-inline-flex justify-content-end'>
-    <div class='sort-bar mr-5'>
+    <div class='sort-bar mx-5'>
       <div class='input-group'>
         <select class='form-control' id='sort' name='sort' onchange='form.submit()'>
           <option value='{{sort}}' hidden>{{sortKey}}</option>
@@ -43,33 +43,34 @@
 {{#if restaurantsData}}
   <div class='container mt-5'>
     <div class='row'>
-      <div class='col-md-10 col-12 mx-auto'>
-        <div class='card-columns'>
-          {{#each restaurantsData}}
-            <div class='card mb-1'>
-              <img class='card-img-top' src='{{this.image}}' alt='{{this.name}}' />
-              <div class='card-body p-3'>
-                <h6 class='card-title mb-1 text-secondary'>{{this.name}}</h6>
-                <div class='restaurant-category mb-1'>
-                  <i class='fas fa-utensils pr-2'></i>
-                  {{this.category}}
+      {{#each restaurantsData}}
+        <div class='col col-lg-3 col-md-6 col-sm-12'>
+          <div class="">
+            <a href='/restaurant/{{this._id}} ' class='text-decoration-none'>
+              <div class='card mb-3'>
+                <img class='card-img-top' src='{{this.image}}' alt='{{this.name}}' />
+                <div class='card-body p-3'>
+                  <h6 class='card-title mb-1 text-secondary'>{{this.name}}</h6>
+                  <div class='restaurant-category mb-1'>
+                    <i class='fas fa-utensils pr-2'></i>
+                    {{this.category}}
+                  </div>
+                  <span class='badge badge-pill badge-danger font-weight-normal'>
+                    {{this.rating}}
+                    <i class='fas fa-star fa-xs'></i>
+                  </span>
                 </div>
-                <span class='badge badge-pill badge-danger font-weight-normal'>
-                  {{this.rating}}
-                  <i class='fas fa-star fa-xs'></i>
-                </span>
+                <div class='card-footer d-flex justify-content-end flex-wrap'>
+                  <a href='/restaurant/{{this._id}}/edit'><button class='btn btn-link btn-sm'>Edit</button></a>
+                  <form action='/restaurant/{{this._id}}?_method=DELETE' method='POST'>
+                    <button type='submit' class='btn btn-danger btn-sm text-white'>delete</button>
+                  </form>
+                </div>
               </div>
-              <div class='card-footer d-flex justify-content-end flex-wrap'>
-                <a href='/restaurant/{{this._id}}/edit'><button class='btn btn-link btn-sm'>Edit</button></a>
-                <a href='/restaurant/{{this._id}}'><button class='btn btn-link btn-sm'>Details</button></a>
-                <form action='/restaurant/{{this._id}}?_method=DELETE' method='POST'>
-                  <button type='submit' class='btn btn-danger btn-sm text-white'>delete</button>
-                </form>
-              </div>
-            </div>
-          {{/each}}
+            </a>
+          </div>
         </div>
-      </div>
+      {{/each}}
     </div>
   </div>
 
