--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -2,6 +2,7 @@
   <div class='col-md-6 m-auto'>
     <div class='card card-body'>
       <h1 class='text-center my-2'>Register</h1>
+      {{> message}}
       <form action='/users/register' method='POST'>
         <div class='mb-3'>
           <label for='name' class='mb-2'>Name</label>
@@ -32,8 +33,10 @@
             placeholder='Confirm Password'
           />
         </div>
-        <button type='submit' class='btn btn-primary btn-block'>Register</button>
-        <a href='/auth/facebook' class='btn btn-info btn-block'>Facebook Login</a>
+        <div class="d-grid gap-2 mt-4">
+          <button type='submit' class='btn btn-primary mb-1'>Register</button>
+          <a href='/auth/facebook' class='btn btn-info'>Facebook Login</a>
+        </div>
       </form>
       <p class='lead mt-2'>
         Have An Account?
