--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -21,7 +21,7 @@
                 class='d-inline-block align-top'
                 alt='我的餐廳清單'
               />
-              {{#if isAuthenticated}}{{ user.name}}{{else}}我{{/if}}的餐廳清單
+              {{#if user.name}}{{ user.name}}{{else}}我{{/if}}的餐廳清單
             </a>
             {{#if isAuthenticated}}
             <a href='/users/logout' class='btn btn-outline-dark'>Logout</a>
