--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -17,11 +17,12 @@
             class='form-control'
             placeholder='Enter Email'
             value='{{email}}'
+            required
           />
         </div>
         <div class='mb-3'>
           <label for='password' class='mb-2'>Password</label>
-          <input type='password' id='password' name='password' class='form-control' placeholder='Enter Password' />
+          <input type='password' id='password' name='password' class='form-control' placeholder='Enter Password' required/>
         </div>
         <div class='mb-3'>
           <label for='confirmPassword' class='mb-2'>Confirm Password</label>
@@ -31,6 +32,7 @@
             name='confirmPassword'
             class='form-control'
             placeholder='Confirm Password'
+            required
           />
         </div>
         <div class="d-grid gap-2 mt-4">
