--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -16,7 +16,9 @@
               value='{{input}}'
             />
             <div class='input-group-append'>
-              <button class='btn btn-major h-100 ' type='submit' id='search-button'><i class='fas fa-search'></i></button>
+              <button class='btn btn-major h-100' type='submit' id='search-button'><i
+                  class='fas fa-search'
+                ></i></button>
             </div>
           </div>
         </div>
@@ -45,7 +47,6 @@
     <div class='row'>
       {{#each restaurantsData}}
         <div class='col col-lg-3 col-md-6 col-sm-12'>
-          <div class="">
             <a href='/restaurant/{{this._id}} ' class='text-decoration-none'>
               <div class='card mb-3'>
                 <img class='card-img-top' src='{{this.image}}' alt='{{this.name}}' />
@@ -62,11 +63,14 @@
                 </div>
                 <div class='card-footer d-flex justify-content-end flex-wrap'>
                   <a href='/restaurant/{{this._id}}/edit'><button class='btn btn-link btn-sm'>Edit</button></a>
-                  <form action='/restaurant/{{this._id}}?_method=DELETE' method='POST'>
-                    <button type='submit' class='btn btn-danger btn-sm text-white'>delete</button>
-                  </form>
+                  <button 
+                    type='button'
+                    class='btn btn-danger btn-sm text-white'
+                    data-id="{{this._id}}"
+                    data-bs-toggle='modal'
+                    data-bs-target='#confirmDelete'
+                  >delete</button>
                 </div>
-              </div>
             </a>
           </div>
         </div>
@@ -85,3 +89,18 @@
 <a href='/restaurant/new' type='button' class='btn btn-success btn-create fixed-bottom m-3'>
   新增餐廳
 </a>
+
+<div class='modal fade' id='confirmDelete' tabindex='-1' aria-hidden='true'>
+  <div class='modal-dialog modal-sm modal-dialog-centered'>
+    <div class='modal-content'>
+      <div class='modal-body'>
+        <p>Are you sure you want to delete?</p>
+        <form id='form' action='' method='POST'>
+          <button type='button' class='btn btn-secondary' data-bs-dismiss='modal'>Cancel</button>
+          <button type='submit' class='btn btn-danger text-white'>delete</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
