--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -50,7 +50,7 @@
           const btn = $(e.relatedTarget);
           const url = '/restaurant/' + btn.data('id') + '?_method=DELETE'
           const modal = $(this);
-          a =modal.find('#form').attr('action' ,url)
+          modal.find('#form').attr('action' ,url)
       });
     </script>
   </body>
